
executable("endian") {
  sources = [ "src/endian.cpp" ]
}

executable("crc32c_test") {
  sources = [ "gn-deps/crc32c/src/crc32c_capi_unittest.c" ]
  deps = [
    "//gn-deps/crc32c:crc32c",
  ]
}

executable("crc32c_example") {
  sources = [ "src/crc32c_example.c" ]
  deps = [
    "//gn-deps/crc32c:crc32c",
  ]
}

executable("snappy_test") {
  testonly = true
  sources = [ "src/snappy_test.cpp" ]
  deps = [
    "//gn-deps/googletest:gtest_main",
    "//gn-deps/snappy:snappy",
  ]
}

executable("leveldb_test") {
  testonly = true
  sources = [ "src/leveldb_test.cpp" ]
  deps = [
    "//gn-deps/googletest:gtest_main",
    "//gn-deps/leveldb:leveldb",
  ]
}

executable("leveldb_log_test") {
  testonly = true
  sources = [ "src/leveldb_log_test.cpp" ]
  include_dirs = [ "//gn-deps/leveldb" ]
  deps = [
    "//gn-deps/googletest:gtest_main",
    "//gn-deps/leveldb:leveldb",
  ]
}

executable("uv_sample") {
  sources = [ "src/uv_sample.c" ]
  deps = [
    "//gn-deps/libuv:libuv",
  ]
}

executable("uv_throughput") {
  sources = [ "src/uv_throughput.cpp" ]
  deps = [
    "//gn-deps/libuv:libuv",
  ]
}

executable("uws_echo") {
  sources = [ "src/uws_echo.cpp" ]
  deps = [
    "//gn-deps/uWebSockets:uws",
  ]
}

executable("zstd_csimple") {
  sources = [ "gn-deps/zstd/examples/simple_compression.c" ]
  deps = [
    "//gn-deps/zstd:zstd",
  ]
}

executable("zstd_dsimple") {
  sources = [ "gn-deps/zstd/examples/simple_decompression.c" ]
  deps = [
    "//gn-deps/zstd:zstd",
  ]
}

executable("zlib_example") {
  sources = [ "gn-deps/zlib/test/example.c" ]
  deps = [
    "//gn-deps/zlib:zlib",
  ]
}

if (!is_win) {

executable("hyperleveldb_test") {
  testonly = true
  sources = [ "src/hyperleveldb_test.cpp" ]
  deps = [
    "//gn-deps/googletest:gtest_main",
    "//gn-deps/HyperLevelDB:hyperleveldb",
  ]
}

# requires fseeko
executable("zlib_zran") {
  sources = [ "gn-deps/zlib/examples/zran.c" ]
  deps = [
    "//gn-deps/zlib:zlib",
  ]
}

}
