
executable("endian") {
  sources = [ "src/endian.cpp" ]
}

executable("endian_simple") {
  sources = [ "src/endian_simple.cpp" ]
}

executable("endian_cgm") {
  sources = [ "src/endian_cgm.cpp" ]
}

executable("endian_enum") {
  sources = [ "src/endian_enum.cpp" ]
}

executable("crc32c_test") {
  sources = [ "gn-deps/crc32c/src/crc32c_capi_unittest.c" ]
  deps = [
    "//gn-deps/crc32c:crc32c",
  ]
}

executable("crc32c_example") {
  sources = [ "src/crc32c_example.c" ]
  deps = [
    "//gn-deps/crc32c:crc32c",
  ]
}

executable("snappy_test") {
  testonly = true
  sources = [ "src/snappy_test.cpp" ]
  deps = [
    "//gn-deps/googletest:gtest_main",
    "//gn-deps/snappy:snappy",
  ]
}

executable("leveldb_test") {
  testonly = true
  sources = [ "src/leveldb_test.cpp" ]
  deps = [
    "//gn-deps/googletest:gtest_main",
    "//gn-deps/leveldb:leveldb",
  ]
}

executable("leveldb_db_test") {
  testonly = true
  defines = [ "TEST_SKIP_BENCHMARK" ]
  configs += [ "//gn-deps/leveldb:leveldb_local_config" ]
  sources = [
    "gn-deps/leveldb/util/testutil.cc",
    "gn-deps/leveldb/db/db_test.cc",
  ]
  deps = [
    "//gn-deps/googletest:gtest",
    "//gn-deps/googletest:gmock",
    "//gn-deps/leveldb:leveldb",
    "//gn-deps/snappy:snappy",
    "//gn-deps/crc32c:crc32c",
  ]
}

executable("leveldb_bp_db_test") {
  testonly = true
  configs += [ "//gn-deps/leveldb-bp:leveldb_local_config" ]
  sources = [
    "gn-deps/leveldb-bp/util/testutil.cc",
    "gn-deps/leveldb-bp/db/db_test.cc",
  ]
  deps = [
    "//gn-deps/googletest:gtest_main",
    "//gn-deps/googletest:gmock",
    "//gn-deps/leveldb-bp:leveldb",
    "//gn-deps/snappy:snappy",
    "//gn-deps/crc32c:crc32c",
  ]
}

executable("psldb_db_test") {
  testonly = true
  configs += [ "//gn-deps/psldb:leveldb_local_config" ]
  sources = [
    "gn-deps/psldb/util/testutil.cc",
    "gn-deps/psldb/db/db_test.cc",
  ]
  deps = [
    "//gn-deps/googletest:gtest_main",
    "//gn-deps/googletest:gmock",
    "//gn-deps/psldb:leveldb",
    "//gn-deps/snappy:snappy",
    "//gn-deps/crc32c:crc32c",
  ]
}

executable("leveldb_log_test") {
  testonly = true
  sources = [ "src/leveldb_log_test.cpp" ]
  include_dirs = [ "//gn-deps/leveldb" ]
  deps = [
    "//gn-deps/googletest:gtest_main",
    "//gn-deps/leveldb:leveldb",
  ]
}

executable("uv_sample") {
  sources = [ "src/uv_sample.c" ]
  deps = [
    "//gn-deps/libuv:libuv",
  ]
}

executable("uv_throughput") {
  sources = [ "src/uv_throughput.cpp" ]
  deps = [
    "//gn-deps/libuv:libuv",
  ]
}

executable("uws_echo") {
  sources = [ "src/uws_echo.cpp" ]
  deps = [
    "//gn-deps/uWebSockets:uws",
  ]
}

executable("zstd_csimple") {
  sources = [ "gn-deps/zstd/examples/simple_compression.c" ]
  deps = [
    "//gn-deps/zstd:zstd",
  ]
}

executable("zstd_dsimple") {
  sources = [ "gn-deps/zstd/examples/simple_decompression.c" ]
  deps = [
    "//gn-deps/zstd:zstd",
  ]
}

executable("zlib_example") {
  sources = [ "gn-deps/zlib/test/example.c" ]
  deps = [
    "//gn-deps/zlib:zlib",
  ]
}

if (!is_win) {

executable("hyperleveldb_test") {
  testonly = true
  sources = [ "src/hyperleveldb_test.cpp" ]
  deps = [
    "//gn-deps/googletest:gtest_main",
    "//gn-deps/hyperleveldb:hyperleveldb",
  ]
}

executable("hyperleveldb_db_test") {
  configs += [ "//gn-deps/hyperleveldb:hyperleveldb_local_config" ]
  sources = [
    "gn-deps/hyperleveldb/util/testutil.cc",
    "gn-deps/hyperleveldb/util/testharness.cc",
    "gn-deps/hyperleveldb/db/db_test.cc",
  ]
  deps = [
    "//gn-deps/hyperleveldb:hyperleveldb",
    "//gn-deps/snappy:snappy",
  ]
}

executable("hyperleveldb_bp_db_test") {
  configs += [ "//gn-deps/hyperleveldb:hyperleveldb_local_config" ]
  sources = [
    "gn-deps/hyperleveldb-bp/util/testutil.cc",
    "gn-deps/hyperleveldb-bp/util/testharness.cc",
    "gn-deps/hyperleveldb-bp/db/db_test.cc",
  ]
  deps = [
    "//gn-deps/hyperleveldb-bp:hyperleveldb",
    "//gn-deps/snappy:snappy",
  ]
}

executable("pshdb_db_test") {
  configs += [ "//gn-deps/pshdb:hyperleveldb_local_config" ]
  sources = [
    "gn-deps/pshdb/util/testutil.cc",
    "gn-deps/pshdb/util/testharness.cc",
    "gn-deps/pshdb/db/db_test.cc",
  ]
  deps = [
    "//gn-deps/pshdb:hyperleveldb",
    "//gn-deps/snappy:snappy",
  ]
}

# requires fseeko
executable("zlib_zran") {
  sources = [ "gn-deps/zlib/examples/zran.c" ]
  deps = [
    "//gn-deps/zlib:zlib",
  ]
}

}
